--- a/package.json
+++ b/package.json
@@ -7,5 +7,5 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Wetbikeboy2500",
-  "license": "ISC"
+  "license": "MIT"
 }
